--- a/web/channel/styles.css
+++ b/web/channel/styles.css
@@ -28,31 +28,38 @@ a.btn:hover {
   margin: 0;
   padding: 0;
 }
-#pkginfo th {
+th {
   padding-bottom: 0.25em;
   padding-right: 0.8em;
 }
-#pkginfo td {
+td {
   padding-bottom: 0.25em;
 }
 @media (max-width: 540px) {
-  #pkginfo th, td {
+  th, td {
     display: block;
   }
-  #pkginfo th {
+  th {
     padding-top: 0.5em;
   }
 }
-#pkginfo td p {
+td p {
   margin: 0;
 }
-#pkginfo td p:not(:last-child) {
+td p:not(:last-child) {
   margin-bottom: 0.5em;
 }
-#pkginfo th {
+th {
   vertical-align: text-top;
   text-align: left;
 }
+table#channelcontents {
+  border-collapse: collapse;
+}
+table#channelcontents tr {
+  border-bottom: 1px solid #ddd;
+}
+
 .codebox {
   /* border:1px solid #888; */
   border-radius: 5px;
