--- a/web/channel/styles.css
+++ b/web/channel/styles.css
@@ -8,7 +8,7 @@ h2 {
   margin-bottom: 0.5em;
   border-bottom: 1px solid #888;
 }
-a.btn {
+.btn {
   margin-left: 0.5em;
   margin-bottom: 0.5em;
   background-color: #555;
@@ -19,9 +19,19 @@ a.btn {
   text-decoration: none;
   display: inline-block;
 }
-a.btn:hover {
+.btn:hover {
   background-color: #707070;
   text-decoration: none;
+}
+button.open-app-btn {
+  background-color: #3469f0;
+  color: white;
+  padding: 12px 36px;
+  border-radius: 5px;
+  font-size: 1.0em;
+}
+button.open-app-btn:hover {
+  background-color: #6b90ef;
 }
 ul.unstyled-list {
   list-style: none;
@@ -84,6 +94,21 @@ code {
   background-color: #eef;
   padding: 0 3px;
   border-radius: 2px;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  padding: 2px 16px;
+  border: 1px solid #ddd;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.card > ul {
+  padding-left: 1.0em;
 }
 
 a {
