--- a/web/channel/styles.css
+++ b/web/channel/styles.css
@@ -23,16 +23,46 @@ h2 {
   background-color: #707070;
   text-decoration: none;
 }
+
 button.open-app-btn {
-  background-color: #3469f0;
-  color: white;
-  padding: 12px 36px;
-  border-radius: 5px;
+  text-align: center;
+  /* text-transform: uppercase; */
+  cursor: pointer;
   font-size: 1.0em;
+  letter-spacing: 3px;
+  position: relative;
+  background-color: #3469f0;
+  color: #fff;
+  padding: 12px 36px;
+  transition-duration: 0.4s;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.25);
+  border-radius: 5px;
 }
 button.open-app-btn:hover {
   background-color: #6b90ef;
+  color: #fff;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.25);
 }
+button.open-app-btn:after {
+  content: "";
+  background: #1459d0;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -36px !important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s
+}
+button.open-app-btn:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
+}
+
 ul.unstyled-list {
   list-style: none;
   margin: 0;
