--- a/web/channel/styles.css
+++ b/web/channel/styles.css
@@ -24,12 +24,14 @@ h2 {
   text-decoration: none;
 }
 
-button.open-app-btn {
+.open-app-btn {
+  /* border: 2px solid #3469f0; */
   text-align: center;
+  vertical-align: middle;
   /* text-transform: uppercase; */
   cursor: pointer;
   font-size: 1.0em;
-  letter-spacing: 3px;
+  letter-spacing: 1px;
   position: relative;
   background-color: #3469f0;
   color: #fff;
@@ -39,12 +41,12 @@ button.open-app-btn {
   box-shadow: 0 4px 8px rgba(0,0,0,0.25);
   border-radius: 5px;
 }
-button.open-app-btn:hover {
+.open-app-btn:hover {
   background-color: #6b90ef;
   color: #fff;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.25);
 }
-button.open-app-btn:after {
+.open-app-btn:after {
   content: "";
   background: #1459d0;
   display: block;
@@ -56,11 +58,16 @@ button.open-app-btn:after {
   opacity: 0;
   transition: all 0.8s
 }
-button.open-app-btn:active:after {
+.open-app-btn:active:after {
   padding: 0;
   margin: 0;
   opacity: 1;
   transition: 0s
+}
+
+.open-app-btn-outlined {
+  background-color: #eee;
+  color: #3469f0;
 }
 
 ul.unstyled-list {
